# hackagent

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: .gitignore  README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/api-reference/: sidebar.json
docs/docs/: HowTo.md  api-index.md  intro.md
docs/docs/architecture/: system-overview.md
docs/docs/attacks/: advprefix-attacks.md
docs/docs/cli/: README.md
docs/docs/hackagent/: agent.md  client.md  errors.md
docs/docs/integrations/: google-adk.md
docs/docs/sdk/: python-quickstart.md
docs/docs/security/: ethical-guidelines.md  responsible-disclosure.md
docs/docs/tutorial-basics/: AdvPrefix.md  _category_.json
docs/docs/tutorial-extras/: _category_.json  manage-docs-versions.md
docs/scripts/: generate_docs.py
examples/cli-examples/: README.md  attack-config.json
examples/google_adk/: hack.py
examples/google_adk/multi_tool_agent/: agent.py
hackagent/: __init__.py  agent.py  branding.py  client.py  errors.py  logger.py  types.py  utils.py
hackagent/api/agent/: agent_create.py  agent_destroy.py  agent_list.py  agent_partial_update.py  agent_retrieve.py  agent_update.py
hackagent/api/apilogs/: apilogs_list.py  apilogs_retrieve.py
hackagent/api/attack/: attack_create.py  attack_destroy.py  attack_list.py  attack_partial_update.py  attack_retrieve.py  attack_update.py
hackagent/api/checkout/: checkout_create.py
hackagent/api/generate/: generate_create.py
hackagent/api/generator/: generator_create.py
hackagent/api/judge/: judge_create.py
hackagent/api/key/: key_create.py  key_destroy.py  key_list.py  key_retrieve.py
hackagent/api/prompt/: prompt_create.py  (+5 more)
hackagent/attacks/: __init__.py  advprefix.py  base.py  strategies.py
hackagent/cli/: __init__.py  config.py  main.py  utils.py
hackagent/models/: __init__.py  agent.py  agent_request.py  agent_type_enum.py  api_token_log.py  attack.py  attack_request.py  checkout_session_request_request.py  checkout_session_response.py  evaluation_status_enum.py  generate_error_response.py  generate_request_request.py  generate_request_request_messages_item.py  generate_success_response.py  generic_error_response.py  organization.py  organization_minimal.py  organization_request.py  paginated_agent_list.py  paginated_api_token_log_list.py  paginated_attack_list.py  paginated_organization_list.py  paginated_prompt_list.py  paginated_result_list.py  paginated_run_list.py  paginated_user_api_key_list.py  paginated_user_profile_list.py  patched_agent_request.py  patched_attack_request.py  patched_organization_request.py  patched_prompt_request.py  patched_result_request.py  patched_run_request.py  patched_user_profile_request.py  prompt.py  prompt_request.py  result.py  result_list_evaluation_status.py  result_request.py  run.py  (+11 more)
hackagent/router/: __init__.py  base.py  router.py
hackagent/vulnerabilities/: prompts.py
tests/: test_google_adk.py
tests/google_adk/: adk_server_runner.py
tutorials/: google_adk.py
(+96 files in other folders)
