[tool.poetry]
name = "hackagent"
version = "0.2.5"
description = "HackAgent is an open-source security toolkit to detect vulnerabilities of your AI Agents."
authors = [
    "Nicola Franco <nicola@vista-labs.ai>",
    "Silvio Busonero <silvio@vista-labs.ai>",
]
readme = "README.md"
packages = [{include = "hackagent"}]
include = [
    { path = "assets/*" }
]

[tool.poetry.scripts]
hackagent = "hackagent.cli.main:cli"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pydantic = "^2.0"
litellm = "^1.69.2"
python-dotenv = "^1.1.0"
rich = "^14.0.0"
pandas = "^2.2.3"
click = "^8.1.0"
pyyaml = "^6.0.0"

[tool.poetry.group.dev.dependencies]
openapi-python-client = ">=0.24.3,<0.26.0"
ruff = "^0.11.9"
pytest = "^8.3.5"
pre-commit = "^4.2.0"
commitizen = "^4.7.1"
cz-conventional-gitmoji = "^0.7.0"
pytest-cov = "^6.1.1"
google-adk = ">=0.5,<1.4"
anyio = "^4.3.0"
pytest-asyncio = ">=0.23.7,<1.1.0"

[tool.poetry.group.docs.dependencies]
pydoc-markdown = {extras = ["docusaurus"], version = "^4.8.2"}
toml = "^0.10.2"
packaging = "^24.0"
requests = "^2.31.0"

[tool.commitizen]
name = "cz_gitmoji"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
data_file = "reports/.coverage"
source = ["hackagent"]

[tool.coverage.report]
fail_under = 40
precision = 1
show_missing = true
skip_covered = true
exclude_lines = [
  "pragma: no cover",
  "@overload",
  'if __name__ == "__main__":',
  "if TYPE_CHECKING:",
]

[tool.coverage.xml]
output = "reports/coverage.xml"

[tool.pytest.ini_options]